--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1805,4 +1805,94 @@ button.icon-unsorted {
 }
 // end contact
 
+// start personal info page
+.personal-info {
+  padding-bottom: 100px;
+}
+.personal-info__tabs.settings__tabs {
+  display: flex;
+  .tabs {
+    max-width: 270px;
+    width: 100%;
+    height: 100%;
+    margin-right: 30px;
+    border: 1px solid #d7d7d7;
+    border-bottom: none;
+    display: block;
+    text-align-last: left;
+    span {
+      display: block;
+      background-color: #fff;
+      border-bottom: 1px solid #d7d7d7;
+      padding: 17px 17px 17px 50px;
+      color: #707070;
+      font-size: 14px;
+      @include f500;
+      &.active {
+        border-bottom: 2px solid $green;
+        color: #37474f;
+        &::before {
+          color: $green;
+        }
+      }
+      &::before {
+        left: 24px;
+        color: #444;
+      }
+    }
+  }
+  .tabs .tab + .tab {
+    border-left: none;
+  }
+  .tab_content {
+    width: 100%;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+  }
+}
+.page-box {
+  border: 1px solid #dedede;
+  background-color: #fff;
+  min-height: 100%;
+}
+.page-box__title {
+  border-bottom: 1px solid #dedede;
+  padding: 18px 34px;
+  font-size: 24px;
+  color: $bg;
+  @include f500;
+}
+.page-box__content {
+  padding: 30px 35px 80px;
+}
+.personal__line {
+  margin-bottom: 21px;
+  display: flex;
+  align-items: center;
+  label {
+    color: #444;
+    width: 260px;
+  }
+  input {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    color: #000;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    padding: 0 10px;
+  }
+  select {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    color: #707070;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    padding: 0 10px;
+  }
+}
+// end personal info page
+
 @import "media";
