--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2081,4 +2081,151 @@ button.icon-unsorted {
 
 // end profile
 
+// start upload page
+.upload__inner {
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  margin-bottom: 110px;
+  &-title {
+    @include f500;
+    font-size: 24px;
+    padding: 16px 35px 18px;
+    color: $bg;
+    border-bottom: 1px solid #d7d7d7;
+    margin-bottom: 40px;
+  }
+  &-content {
+    margin-bottom: 30px;
+    padding-left: 45px;
+    padding-right: 50px;
+  }
+  button {
+    background-color: $green;
+    border: none;
+    padding: 15px 36px;
+    color: #fff;
+    margin-left: 175px;
+    cursor: pointer;
+  }
+}
+.upload-line {
+  margin-bottom: 25px;
+  display: flex;
+  label {
+    min-width: 175px;
+    padding-right: 15px;
+    padding-top: 5px;
+    color: #444;
+    font-size: 14px;
+    @include f500;
+    span {
+      color: $green;
+      font-size: 24px;
+      &::placeholder {
+        color: #707070;
+      }
+    }
+  }
+  select,
+  input,
+  textarea {
+    width: 100%;
+    display: block;
+    border: 1px solid #d7d7d7;
+    height: 40px;
+    background-color: #f9f9f9;
+    padding: 0px 18px;
+  }
+  textarea {
+    resize: none;
+    padding: 8px 18px;
+    height: 150px;
+  }
+  input[type="file"]{
+    outline: none;
+  }
+  .jq-file__browse {
+    position: absolute;
+    top: 5px;
+    right: auto;
+    left: 9px;
+    font-size: 12px;
+    line-height: 26px;
+    color:#444;
+    padding: 0 12px;
+    border: 1px solid #d7d7d7;
+    border-left: 1px solid #d7d7d7;
+    border-radius: 0;
+    background: #fff;
+    box-shadow: none;
+    text-shadow: none;
+  }
+  .jq-file {
+    width: 100%;
+    border-radius: 0px;
+    box-shadow: none;
+    border: 1px solid #d7d7d7;
+    height: 40px;
+    background-color: #f9f9f9;
+  }
+  .jq-file__name {
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    padding: 0;
+    padding: 0px 18px;
+    margin-left: 100px;
+    border: none;
+    border-bottom-color: transparent;
+    border-radius: 4px;
+    background: transparent;
+    box-shadow: none;
+    font-size: 12px;
+    color: #707070;
+    line-height: 40px;
+    
+  }
+  .jq-selectbox {
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    border: 1px solid #d7d7d7;
+    height: 40px;
+    background-color: #f9f9f9;
+    border-bottom-color: #d7d7d7;
+    border: 1px solid #d7d7d7;
+    padding: 0px 18px;
+    border-radius: 0px;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: "Roboto-Regular", sans-serif;
+    color: #707070;
+    text-shadow: none;
+    line-height: 40px;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    color: #444;
+    top: 0;
+    line-height: 40px;
+    right: 20px;
+    &::before {
+      font-family: "icomoon";
+      content: "\f0d7";
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
+  }
+}
+// .upload__inner-title{
+//   @include f500;
+//   font-size: 24px;
+//   padding: 16px 35px 18px;
+//   color:$bg;
+//   border-bottom: 1px solid #d7d7d7;
+//   margin-bottom: 40px;
+// }
+// end upload page
+
 @import "media";
