--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,8 @@ html {
 html,
 body {
   height: 100%;
+  overflow-x: hidden;
+  position: relative;
 }
 
 a {
@@ -29,7 +31,6 @@ body {
   font-weight: 400;
   line-height: 24px;
   color: $text;
-  overflow-x: hidden;
   background-color: $grey;
 }
 
