--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1492,6 +1492,39 @@ button.icon-unsorted {
   display: flex;
   justify-content: space-between;
   padding: 30px 0;
+  form {
+    .jq-selectbox {
+      width: 100%;
+    }
+    .jq-selectbox__select {
+      height: 40px;
+      background-color: #fff;
+      border-bottom-color: #d7d7d7;
+      border: 1px solid #d7d7d7;
+      padding: 6px 27px 6px 11px;
+      border-radius: 0px;
+      background: #fff;
+      box-shadow: none;
+      font-family: "Roboto-Regular", sans-serif;
+      color: #70838d;
+      text-shadow: none;
+      line-height: 27px;
+    }
+    .jq-selectbox__trigger-arrow {
+      border: none;
+      color: $green;
+      top: 7px;
+      line-height: 27px;
+      right: 20px;
+      &::before {
+        font-family: "icomoon";
+        content: "\f0d7";
+      }
+    }
+    .jq-selectbox__trigger {
+      border-left: none;
+    }
+  }
 }
 .price__product {
   font-size: 22px;
@@ -1917,7 +1950,7 @@ button.icon-unsorted {
   }
   .jq-selectbox.jqselect {
     max-width: 540px;
-   }
+  }
 }
 // end personal info page
 
@@ -2135,7 +2168,7 @@ button.icon-unsorted {
   }
 }
 
-
+.price__box,
 .personal__line,
 .upload-line,
 .withdrawals__form-line {
